Changes in 1.8 (??.??.2011)

 - Added ISceneLoader interface and .irr loader. Users can now add their own scene loaders to the scene manager and use them by calling loadScene.

 - Renamed IGUIElement::bringToBack to sendToBack, like in Windows

 - Send EGET_ELEMENT_CLOSED event when context menues should be closed (thx @ Mloren for reporting).

 - zip archive fixes: Fix directory tags in file list. Fix loading of stream zip files which have file sizes only in the central directory.

 - Added treeview to GUI editor, provided by Armen

 - Added root type for GUI environment

 - Fixed panel scrollbars in GUI editor, reported by Armen

 - Fix b3d loading of files with mixed mesh/bone sections.

 - Fix particle emitters which used integer random numbers so far. The distributions of the particles should be much better (and the code also somewhat faster) now.

 - Add new random method frand: Returns a random number in the interval [0..1] and gives better distributions than using fmodf on the integer number.

 - Add node parameter to saveScene and loadScene. saveScene saves the given node and all descendants to the file (if 0, the full scene is saved as before). loadScene loads all elements of the scene as childs of the given node. As before, 0 would load the file on the top level (scenemanager).

 - Add method to make a filename relative to a given directory.

 - Fix setMesh to correctly update the joints cache.

 - Fix setting transition time of skinned meshes back to 0.

 - Add some getters to IGUIImage: getImage, getColor

 - Fix OpenGL FBODepthTexture to create less overhead

 - Fix MRT disablingunder OpenGL

 - API change: Added write only lock mode for textures. The lock method has changed the signature and uses an enum parameter now instead of a bool. The default is still to lock for read/write (previously 'false'). The old 'true' value should be replaced by ETLM_READ_ONLY.

 - Speedup deleting of particles

 - Add function IParticleSystemSceneNode::clearParticles
